@@ -3,6 +3,10 @@
   + introduced the safe mode
   + introduced the dual frame buffer
 
+20120403:
+  + ezthumb.c: improved twopass method after sanity test.
+    Replace the scan mode with the safe mode
+
 20120322:
   + ezthumb.c: reapply the twopass method
 
